# zyncx

./: .env.example  .gitignore  ARCHITECTURE.md  ARCIUM_INTEGRATION.md  ARCIUM_MXE_INTEGRATION.md  ARCIUM_SETUP.md  ARCIUM_STATUS.md  ARCIUM_SUPPORT_REQUEST.md  AUTOMATED_FIXES_COMPLETE.md  Anchor.toml  Arcium.toml  Cargo.toml  DEMO_GUIDE.md  DEPLOYMENT_SUCCESS.md  INTEGRATION.md  PROJECT_STATUS.md  PROTOCOL.md  README.md  ROADMAP.md  Solana Privacy with Arcium & Noir.txt  package-lock.json  package.json  temp1.json  temp2.json  temp3.json
.cargo/: config.toml
app/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
app/app/: globals.css  layout.tsx  page.tsx
app/components/: Footer.tsx  HeroSection.tsx  HowItWorks.tsx  Navbar.tsx  PrivacyVault.tsx  WalletProvider.tsx
app/lib/: arcium.ts  crypto.ts  index.ts  merkle.ts  mixer.json  program.ts  prover.ts  zyncx-idl.json  zyncx.json
artifacts/: arx_ata_45hQ_N81R.json  arx_ata_8nEQ_nucP.json  arx_ata_Dk6o_zcds.json  arx_ata_recovery_peer_0.json  arx_ata_recovery_peer_1.json  arx_ata_recovery_peer_2.json  arx_ata_recovery_peer_3.json  arx_ata_recovery_peer_4.json  arx_mint.json  arx_node_8nEQ_nucP.json  arx_node_Dk6o_zcds.json  arx_node_recovery_peer_0.json  arx_node_recovery_peer_1.json  arx_node_recovery_peer_2.json  arx_node_recovery_peer_3.json  arx_node_recovery_peer_4.json  check_limit_order_raw_circuit_0.json  circuits_hash.txt  cluster_acc_0.json  docker-compose-arx-env.yml  executing_pool_acc.json  mempool_acc.json  mxe_acc.json  mxe_key_recovery_init_comp.json  mxe_keygen_comp.json  mxe_keygen_comp_def.json  mxe_lut_acc.json  operator_acc_8nEQ_nucP.json  operator_acc_Dk6o_zcds.json  operator_acc_recovery_peer_0.json  operator_acc_recovery_peer_1.json  operator_acc_recovery_peer_2.json  operator_acc_recovery_peer_3.json  operator_acc_recovery_peer_4.json  recovery_cluster_acc.json  validate_confidential_swap_raw_circuit_0.json  validate_dca_interval_raw_circuit_0.json  verify_sufficient_balance_raw_circuit_0.json  wallet_acc_45hQ_N81R.json  wallet_acc_8nEQ_nucP.json  (+13 more)
artifacts/localnet/: identity_0.pem  identity_1.pem  identity_2.pem  identity_3.pem  identity_4.pem  identity_5.pem  identity_6.pem  node_0.json  node_1.json  node_2.json  node_4.json  node_5.json  node_6.json  node_bls_0.json  node_bls_1.json  node_bls_2.json  node_bls_3.json  node_bls_4.json  node_bls_5.json  node_bls_6.json  node_callback_0.json  node_callback_1.json  node_callback_2.json  node_callback_3.json  node_callback_4.json  node_callback_5.json  node_callback_6.json  node_x25519_0.json  node_x25519_1.json  node_x25519_2.json  node_x25519_3.json  node_x25519_4.json  node_x25519_6.json  recovery_node_3.json  recovery_node_x25519_5.json  td_identity.pem  td_master_seed.json
contracts/solana/zyncx/: Cargo.toml
contracts/solana/zyncx/src/: lib.rs
contracts/solana/zyncx/src/dex/: jupiter.rs  mod.rs  types.rs
contracts/solana/zyncx/src/errors/: mod.rs
contracts/solana/zyncx/src/instructions/: arcium_mxe.rs  confidential.rs  deposit.rs  initialize.rs  mod.rs  swap.rs  verify.rs  withdraw.rs
contracts/solana/zyncx/src/state/: arcium.rs  arcium_mxe.rs  merkle_tree.rs  mod.rs  pyth.rs  vault.rs  verifier.rs
docs/: ARCHITECTURE.md  INTEGRATION_GUIDE.md  README.md
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
migrations/: deploy.ts
mixer/: Nargo.toml  Prover.toml
mixer/src/: main.nr
scripts/: check-vault-state.ts  debug-instruction-data.ts  deploy-devnet.sh  find-correct-nullifier.ts  init-mxe.ts  init-vault.ts  raw-deposit.ts  test-deposit-direct.ts  test-deposit.ts  test-withdraw-anchor.ts  test-withdraw-auto-pda.ts  test-withdraw-direct.ts
tests/: zyncx.ts
(+10 files in other folders)
