[workspace]
members = [
    "contracts/solana/*"
]
# Note: encrypted-ixs is excluded from workspace to avoid zeroize version conflict
# Build encrypted-ixs separately with: cd encrypted-ixs && cargo build

resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
