[package]
name = "zyncx"
version = "0.1.0"
description = "Privacy-preserving vault system with confidential computation on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zyncx"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token"] }
bytemuck = { version = "1.14", features = ["derive"] }
# Note: ark-ff, ark-bn254, light-poseidon removed due to zeroize version conflict with solana-program
# ZK proof verification is done via mock for demo - production would use groth16-solana crate

# Arcium SDK for MPC computation
# NOTE: Requires Solana toolchain with Cargo 1.85+ for edition2024 support
# Currently using mock implementations in arcium_mxe.rs
# Uncomment when Solana CLI updates to support edition2024:
# arcium-anchor = "0.6.6"
# arcium-client = "0.6.6"
# arcium-macros = "0.6.6"
