[package]
name = "zyncx"
version = "0.1.0"
description = "Privacy-preserving vault system with confidential computation on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zyncx"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "arcium-anchor/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
bytemuck = { version = "1.14", features = ["derive"] }
solana-program = "2.0"

# Arcium SDK for MPC computation (pinned to exact versions)
arcium-client = { version = "=0.6.3", default-features = false }
arcium-macros = "=0.6.3"
arcium-anchor = "=0.6.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }


